change navbar min-width to smaller in order to avoid bugs on mobile devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -205,7 +205,7 @@ html {
   justify-content: space-between;
   align-items: center;
   gap: 0;
-  width: clamp(400px, 85%, 1600px);
+  width: clamp(350px, 85%, 1600px);
   margin: 0 auto;
   padding: 25px 0;
   z-index: 10;
